# nord_stupid

./: .gitignore  CMakeLists.txt  LICENSE  package.xml
src/: common.hpp  mission_dumb_one.cpp  mission_dumb_two.cpp  point.hpp
